tests/errors/test_14.x
// Break must be in a loop construction

fn main() -> i64 {

    break;

    if true {
        break;
    }
}